# server.js
@@ -1,42 +1,69 @@
-var express = require('express');
-const cors = require('cors');
+// var express = require('express');
+// const cors = require('cors');
+// const app = express();
+
+// const swaggerUi = require('swagger-ui-express');
+// const swaggerDocument = require('./swagger.json');
+
+// app
+//     .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+//     .use(cors())
+//     .use(express.json())
+//     .use(express.urlencoded({ extended: true }))
+//     .use((req, res, next) => {
+//         res.setHeader('Access-Control-Allow-Origin', '*');
+//         res.setHeader(
+//             'Access-Control-Allow-Headers',
+//             'Origin, X-Requested-With, Content-Type, Accept, Z-Key'
+//         );
+//         res.setHeader('Content-Type', 'application/json');
+//         res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
+//         next();
+//     })
+//     .use('/', require('./routes'));
+
+// const db = require('./models');
+// db.mongoose
+//     .connect(db.url, {
+//         useNewUrlParser: true,
+//         useUnifiedTopology: true,
+//     })
+//     .then(() => {
+//         console.log('Connected to the database!');
+//     })
+//     .catch((err) => {
+//         console.log('Cannot connect to the database!', err);
+//         process.exit();
+//     })
+
+// const PORT = process.env.PORT || 8080;
+// app.listen(PORT, () => {
+//     console.log(`Server is running on port ${PORT}`);
+// });
+
+const express = require('express');
+const bodyParser = require('body-parser');
+const mongodb = require('./db/connect');
+const port = process.env.PORT || 8080;
 const app = express();
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');
-
 app
-    .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
-    .use(cors())
-    .use(express.json())
-    .use(express.urlencoded({ extended: true }))
-    .use((req, res, next) => {
-        res.setHeader('Access-Control-Allow-Origin', '*');
-        res.setHeader(
-            'Access-Control-Allow-Headers',
-            'Origin, X-Requested-With, Content-Type, Accept, Z-Key'
-        );
-        res.setHeader('Content-Type', 'application/json');
-        res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
-        next();
-    })
-    .use('/', require('./routes'));
+  .use(bodyParser.json())
+  .use((req, res, next) => {
+    res.setHeader('Access-Control-Allow-Origin', '*');
+    next();
+  })
+  .use('/', require('./routes'));
 
-const db = require('./models');
-db.mongoose
-    .connect(db.url, {
-        useNewUrlParser: true,
-        useUnifiedTopology: true,
-    })
-    .then(() => {
-        console.log('Connected to the database!');
-    })
-    .catch((err) => {
-        console.log('Cannot connect to the database!', err);
-        process.exit();
-    })
+process.on('uncaughtException', (err, origin) => {
+  console.log(process.stderr.fd, `Caught exception: ${err}\n` + `Exception origin: ${origin}`);
+});
 
-const PORT = process.env.PORT || 8080;
-app.listen(PORT, () => {
-    console.log(`Server is running on port ${PORT}`);
+mongodb.initDb((err) => {
+  if (err) {
+    console.log(err);
+  } else {
+    app.listen(port);
+    console.log(`Connected to DB and listening on ${port}`);
+  }
 });
